[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "iembot"
description = "A poorly written XMPP bot that does other things"
readme = "README.md"
license = { "text" = "Apache" }
authors = [
  { name = "daryl herzmann", email = "akrherz@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]

urls."Homepage" = "https://github.com/akrherz/iembot"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.ruff]
target-version = "py39"

line-length = 79
lint.select = [
  "E",
  "F",
  "I",
]
