[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "iembot"
description = "A poorly written XMPP bot that does other things"
readme = "README.md"
license = { "text" = "Apache" }
authors = [
  { name = "daryl herzmann", email = "akrherz@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "atproto",
  "click",
  "feedgen",
  "httpx",
  "mastodon-py",
  "psycopg",
  "pyiem>=1.26",
  "pymemcache",
  "python-twitter",
  "requests",
  "service-identity",
  "twisted>=18.4",
]

optional-dependencies.dev = [
  "cartopy",
  "codecov",
  "cython",
  "pytest",
  "pytest-cov",
  "pytest-runner",
]
urls."Homepage" = "https://github.com/akrherz/iembot"
scripts.iembot = "iembot.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
"iembot" = [ "data/startrek" ]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.ruff]
target-version = "py311"

line-length = 79
lint.select = [
  "A",     # builtins
  "ARG",   # unused args
  "ASYNC", # async
  "B",     # bugbear
  # "BLE",  # blind except
  "C4", # comprehensions
  # "C90",  # mccabe
  # "COM",  # commas
  # "DTZ",  # datetime
  "E", # pycodestyle
  # "EM",  # flake8-errmsg
  "ERA", # eradicate
  "EXE", # shebang
  "F",   # pyflakes
  "FLY", # fly
  # "FBT",  # flake8-boolean-trap
  # "FIX",  # has fixme
  "FURB", # refurb
  "G",    # logging-format
  "I",    # isort
  "ICN",  # implicit-conv
  "INT",  # flake8-gettext
  "ISC",  # implicit-str-concat
  "LOG",  # logging
  # "N",  # naming
  "NPY",  # numpy
  "PERF", # performance
  # "PD",  # pandas-vet
  "PIE", # flake8-pie
  "PLE", # pylint error
  # "PLR",  # pylint refactoring
  "PLW", # pylint warning
  "PT",  # pytest style
  # "PTH",  # pathlib
  "PYI", # pyi
  "Q",   # flake8-quotes
  # "RET",  # flake8-return
  "RSE", # raise
  "RUF", # ruff specific
  # "S",  # bandit
  # "S608",  # SQL injection
  # "SIM",  # simplify
  "T20", # print
  "TC",  # type checking
  "TID", # tidy imports
  # "TRY",  # try-except-raise
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

lint.per-file-ignores."tests/**/*.py" = [
  "S101", # assert
]
lint.per-file-ignores."{scripts,tests}/**/*.py" = [
  "T20", # print
]
