[metadata]
name = iembot
author = daryl herzmann
author_email = akrherz@gmail.com
url = https://github.com/akrherz/iembot
keywords = meteorology
license = Apache
license-file = LICENSE
description = An XMPP Message Router, sort of.
description-file = README.md

[pep8]
ignore = W503

[options]
include_package_data = True
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
setup_requires = setuptools_scm

[options.packages.find]
where = src
